# sage-evidence-rag-engine

./: Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  experiment_v108.yaml  experiment_v123.yaml  experiment_v138.yaml
frontend/: package.json
src/: logging_config.py
src/adapters/: alerting_adapters_v8_s3.py  alerting_adapters_v9_s23.py  caching_adapters_v2_s20.py  caching_adapters_v4_s15.py  caching_adapters_v9_s10.py  caching_adapters_v9_s40.py  classification_adapters_v4_s18.py  classification_adapters_v5_s8.py  classification_adapters_v8_s23.py  clustering_adapters_v4_s25.py  clustering_adapters_v9_s20.py  embedding_adapters_v1_s22.py  embedding_adapters_v1_s7.py  embedding_adapters_v5_s12.py  (+33 more)
tests/: conftest_v115.py  conftest_v130.py  conftest_v145.py  test_api.py  test_api_v105.py  test_api_v120.py  test_api_v135.py  test_connector_v114.py  test_connector_v129.py  test_distributed_v110.py  test_distributed_v125.py  test_distributed_v140.py  test_e2e_v115.py  test_e2e_v130.py  test_e2e_v145.py  test_eval_v104.py  test_eval_v119.py  test_evaluation.py  test_features_v111.py  test_features_v126.py  test_features_v141.py  test_inference_v113.py  test_inference_v128.py  test_inference_v143.py  test_integration.py  test_integration_v115.py  test_integration_v130.py  test_integration_v145.py  test_loader.py  test_model.py  test_model_v102.py  test_model_v117.py  test_model_v132.py  test_pipeline_v101.py  test_pipeline_v116.py  test_pipeline_v131.py  test_stream_v107.py  test_stream_v122.py  test_stream_v137.py  test_training.py  (+5 more)
(+562 files in other folders)
